--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "platzi",
   "version": "0.1.0",
   "description": "Traductor de idioma platzi",
-  "main": "index.js",
+  "main": "dist/src/platzom.js",
   "scripts": {
-    "build": "babel src/platzom.js -d dist"
+    "build": "babel src/platzom.js -d dist",
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,8 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.6.1"
+    "babel-preset-env": "^1.6.1",
+    "chai": "^4.1.2",
+    "mocha": "^5.0.5"
   }
 }
