--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "platzi",
+  "name": "platzomniz",
   "version": "0.1.0",
   "description": "Traductor de idioma platzi",
   "main": "dist/src/platzom.js",
